# superdroplet

./: .gitignore  CMakeLists.txt  Makefile  README.md  cases.py  collisions.cpp  collisions.f90  collisions.hpp  common.f90  constants.f90  constants.hpp  droplet.cpp  droplet.f90  droplet.hpp  hall.py  hall.pyx  math.f90  plot.py  plot_output.py  plot_scaling.py  quick  sce.cpp  sce.f90  sce.py  sd_cy.pyx  setup.py  superdroplet.pxd  superdroplet.py  superdroplet.pyx  util.cpp  util.f90  util.hpp  utils.py
old/: README.md
old/sd_cpp/: CMakeLists.txt  cloud.h
old/sd_cython/: anim_frames.py  sce_dist.py
old/sd_fortran/: .gitignore  collisions.f90  sce.f90
old/sd_julia/: plot.jl  sce_util.jl
old/sd_numba/: README.md  model.py  superdroplet.py
sd_cpp/: .gitignore  CMakeLists.txt  Justfile  README.md  build.sh  collisions.cpp  collisions.hpp  droplet.hpp  plot_output.py  quick  util.cpp
sd_cpp/include/core/: constants.hpp  droplet.hpp
sd_cpp/include/io/: binning.hpp
sd_cpp/include/physics/: collision.hpp  kernels.hpp
sd_cpp/include/utils/: math.hpp  time.hpp
sd_cpp/src/: main.cpp
sd_cpp/src/core/: droplet.cpp
sd_cpp/src/io/: binning.cpp
sd_cpp/src/physics/: collision.cpp  kernels.cpp
sd_cpp/src/utils/: math.cpp  time.cpp
sd_cpp/tests/: CMakeLists.txt  test_binning.cpp  test_collision.cpp  test_constants.cpp  test_droplet.cpp  test_kernels.cpp  test_math.cpp  test_time.cpp
sd_cython/: Makefile  sd_cy.pyx  superdroplet.pyx
sd_fortran/: Makefile  README.md  droplet.f90  math.f90  sce.f90
sd_julia/: Justfile  README.md  sce.jl
sd_julia-v2/: .gitignore  Project.toml  README.md  test_run.jl
sd_julia-v2/src/: SuperdropletModel.jl  sce.jl
sd_julia-v2/src/core/: config.jl  droplet.jl
sd_julia-v2/src/physics/: collision.jl  kernels.jl
sd_julia-v2/src/utils/: binning.jl  math.jl
sd_julia-v2/test/: runtests.jl  test_binning.jl  test_collision.jl  test_constants.jl  test_droplet.jl  test_kernels.jl  test_math.jl  test_time.jl
sd_julia/src/: SuperdropletModel.jl  sce.jl
sd_julia/src/core/: constants.jl  droplet.jl
sd_julia/src/utils/: time.jl
sd_julia/test/: runtests.jl  test_collision.jl  test_constants.jl  test_time.jl
sd_modern_fortran/: .gitignore  Justfile  README.md  ford.md  fpm.toml
sd_modern_fortran/app/: main.f90
sd_modern_fortran/src/: collisions.f90  constants.f90  droplet.f90  kernels.f90  time.f90  util.f90
sd_numba/: .gitignore  Justfile  README.md  cases.py  hall.py  pyproject.toml  sce.py  sd_util.py  setup.py  utils.py
sd_numba/src/sd_numba/: __init__.py  sce.py
sd_numba/src/sd_numba/core/: config.py  constants.py  droplet.py
sd_numba/src/sd_numba/physics/: collision.py  kernels.py
sd_numba/src/sd_numba/utils/: binning.py  math.py
sd_numba/tests/: __init__.py  conftest.py  test_binning.py  test_collisions.py  test_config.py  test_constants.py  test_core_config.py  test_droplet.py  test_kernels.py  test_math.py  test_physics_collision.py  test_time.py  test_utils_binning.py
sd_python/: .gitignore  Justfile  README.md  cases.py  common.pxi  hall.pxd  profile_cprofile.py  pyproject.toml  utils.py
sd_python/src/sd_python/: sce.py
sd_python/src/sd_python/core/: config.py  constants.py  droplet.py
sd_python/src/sd_python/physics/: collision.py  kernels.py
sd_python/src/sd_python/utils/: binning.py  math.py  time.py
sd_python/tests/: conftest.py  test_config.py  test_time.py
sd_rust/: .gitignore  Cargo.toml  Justfile  README.md
sd_rust/src/: lib.rs  main.rs
sd_rust/src/core/: constants.rs  droplet.rs  mod.rs
sd_rust/src/io/: binning.rs  mod.rs
sd_rust/src/physics/: collision.rs  kernels.rs  mod.rs
sd_rust/src/utils/: math.rs  mod.rs  time.rs
